// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overrideRequestMethod https get logs request 1`] = `
Array [
  "%j",
  Object {
    "message": Object {
      "clientId": "a-client-id",
      "integrationUuid": "custom0buid",
      "intentName": undefined,
      "method": "get",
      "path": "bearer.sh",
      "pathname": "/path",
      "stage": undefined,
      "tid": "aws_trace",
      "type": "externalCall",
    },
    "timestamp": 5,
  },
]
`;

exports[`overrideRequestMethod https get logs request 2`] = `
Array [
  "%j",
  Object {
    "buid": "custom0buid",
    "payload": Object {
      "duration": 10,
      "request": Object {
        "auth": null,
        "body": "",
        "hash": null,
        "headers": Object {},
        "host": "bearer.sh",
        "hostname": "bearer.sh",
        "href": "https://bearer.sh/path?ok=false",
        "method": "get",
        "path": "/path?ok=false",
        "pathname": "/path",
        "port": null,
        "protocol": "https:",
        "query": Object {
          "ok": "false",
        },
        "search": "?ok=false",
        "url": "https://bearer.sh/path?ok=false",
      },
      "response": Object {
        "body": "{\\"great\\":\\"sponge bob is the king\\"}",
        "headers": Object {
          "content-type": "application/json",
        },
        "status": 201,
      },
    },
    "payloadType": "EXTERNAL_CALL",
    "service": "function",
    "tid": "aws_trace",
  },
]
`;

exports[`overrideRequestMethod https request logs request 1`] = `
Array [
  "%j",
  Object {
    "message": Object {
      "clientId": "a-client-id",
      "integrationUuid": "custom0buid",
      "intentName": undefined,
      "method": "get",
      "path": "bearer.sh",
      "pathname": undefined,
      "stage": undefined,
      "tid": "aws_trace",
      "type": "externalCall",
    },
    "timestamp": 5,
  },
]
`;

exports[`overrideRequestMethod https request logs request 2`] = `
Array [
  "%j",
  Object {
    "buid": "custom0buid",
    "payload": Object {
      "duration": 15,
      "request": Object {
        "auth": undefined,
        "body": "{\\"todo\\":\\"Buy the milk\\"}",
        "hash": undefined,
        "headers": Object {
          "useragent": "Bearer",
        },
        "host": "bearer.sh:443",
        "hostname": "bearer.sh",
        "href": undefined,
        "method": "get",
        "path": "/postPath?postQuery=sponge",
        "pathname": undefined,
        "port": 443,
        "protocol": undefined,
        "query": undefined,
        "search": undefined,
        "url": "undefined//bearer.sh:443/postPath?postQuery=sponge",
      },
      "response": Object {
        "body": "{\\"great\\":\\"sponge bob is the king of posts\\"}",
        "headers": Object {
          "content-type": "application/json",
        },
        "status": 204,
      },
    },
    "payloadType": "EXTERNAL_CALL",
    "service": "function",
    "tid": "aws_trace",
  },
]
`;
